# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import catalogRouter from "./catalog";
+import storefrontRouter from "./storefront";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(catalogRouter);
+router.use(storefrontRouter);
 
 export default router;
